--- a/src/components/shop.css
+++ b/src/components/shop.css
@@ -1,3 +1,25 @@
 .shop{
-    padding: 4rem 2rem;
+    padding: 4rem 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.list{
+    width: 100%;
+    margin-left: 2.5%;
+}
+
+.ant-row{
+    row-gap: 1rem;
+    justify-content: flex-start;
+}
+
+.card{
+    width: 95%;
+    height: auto;
+}
+
+.ant-card-head{
+    border: none;
 }
