--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,17 @@
     margin: 0px;
 }
 
+.ant-menu-title-content{
+    display: flex !important;
+}
+
 .navigation{
+    margin-top: 5px;
     background-color: var(--bg);
+    display: flex;
+    justify-content: center;
+    @media screen and (min-width: 800px) {
+        justify-content: flex-start;
+    }
 }
 
